10-k8s manifests/counter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cgi-counter
spec:
  type: NodePort
  selector:
    app: cgi-counter
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32025
