10-k8s manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static
spec:
  selector:
    app: nginx-static
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
