10-k8s manifests/linuxdays2025-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linuxdays2025
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - linuxdays2025.tomasek.cz
    secretName: linuxdays2025-tls
  rules:
  - host: linuxdays2025.tomasek.cz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-static
            port:
              number: 8080
      - path: /cgi-bin/counter.sh
        pathType: ImplementationSpecific
        backend:
          service:
            name: cgi-counter
            port:
              number: 8080
